# kindle

./: .gitignore  APIS.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/evol-core/: Cargo.toml
crates/evol-core/src/: lib.rs  utils.rs
crates/evol-core/src/data/: mod.rs
crates/evol-core/src/kind/: conversions.rs  mod.rs
crates/evol-core/src/nn/: mod.rs  var.rs  vs.rs
crates/evol-core/src/nn/layers/: activations.rs  conv2d.rs  linear.rs  mod.rs
crates/evol-core/src/nn/optim/: adam.rs  sgd.rs
crates/evol-core/src/shape/: broadcast.rs  mod.rs
crates/evol-core/src/tensor/: broadcast.rs  cmp.rs  math.rs  method_traits.rs  mod.rs  ops.rs  wrap.rs
crates/evol-core/src/tensor/methods/: activations.rs  argmax.rs  argmin.rs  chunk.rs  flatten.rs  get.rs  indexops.rs  mean.rs  mod.rs  reshape.rs  softmax.rs  stack.rs  sum.rs  t.rs  to_scalar.rs  unsqueeze.rs
crates/evol-macros/: Cargo.toml
crates/evol-macros/src/: lib.rs
crates/evol-macros/src/dataset/: mod.rs  parquet_parser.rs
crates/evol-macros/src/model/: mod.rs  parser.rs
crates/evol-macros/src/module/: mod.rs
crates/evol-macros/src/shape/: arg.rs  mod.rs
crates/evol-macros/src/shape/index/: i.rs  indexer.rs
crates/evol-macros/src/shape/methods/: argmax.rs  argmin.rs  broadcast.rs  broadcast_as.rs  broadcast_left.rs  broadcast_matmul.rs  cat.rs  chunk.rs  flatten.rs  flatten_from.rs  forward.rs  get.rs  get_on_dim.rs  indexops.rs  matmul.rs  mod.rs  narrow.rs  squeeze_dim.rs  stack.rs  swiglu.rs  t.rs  transpose.rs  unsqueeze.rs
crates/firefly-core/: Cargo.toml
crates/firefly-core/src/: lib.rs
crates/firefly-core/src/device/: mod.rs
crates/firefly-core/src/dtype/: mod.rs
crates/firefly-macros/: Cargo.toml
crates/firefly-macros/src/: lib.rs
crates/firefly-macros/src/shape/: arg.rs  mod.rs
crates/kindle-core/: Cargo.toml
crates/kindle-core/src/: err.rs  lib.rs  utils.rs
crates/kindle-core/src/data/: loader.rs
crates/kindle-core/src/nn/: loss.rs  mod.rs  tuple.rs  vs.rs
crates/kindle-core/src/nn/layers/: conv2d.rs  mod.rs  pool.rs
crates/kindle-core/src/nn/optim/: mod.rs  sgd.rs
crates/kindle-core/src/shape/: mod.rs
crates/kindle-core/src/tensor/: cmp.rs  method_traits.rs  mod.rs  ops.rs
crates/kindle-core/src/tensor/methods/: cat.rs  get.rs  matmul.rs  narrow.rs  squeeze.rs  t.rs  transpose.rs
crates/kindle-macros/: Cargo.toml
crates/kindle-macros/src/: lib.rs
crates/kindle-macros/src/dataset/: mod.rs  parquet_parser.rs
crates/kindle-macros/src/model/: arg.rs  mod.rs  onnx_parser.rs
crates/kindle-macros/src/module/: mod.rs
crates/kindle-macros/src/shape/: mod.rs
crates/kindle-macros/src/shape/index/: i.rs  indexer.rs  mod.rs
crates/kindle-macros/src/shape/methods/: broadcast.rs  broadcast_as.rs  broadcast_left.rs  broadcast_matmul.rs  cat.rs  chunk.rs  flatten.rs  flatten_from.rs  forward.rs  get.rs  get_on_dim.rs  indexops.rs  matmul.rs  narrow.rs  squeeze_dim.rs  stack.rs  swiglu.rs  t.rs  transpose.rs  unsqueeze.rs
examples/mnist/: Cargo.toml
examples/mnist/src/: eq.py  keras.py  main.rs  test.py
examples/tensor/: Cargo.toml
examples/tensor/src/: main.rs
src/: lib.rs
