[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT or Apache-2.0"

[package]
name = "evol"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT or Apache-2.0"

[features]
default = []

non-nightly = ["cuda", "half", "onnx"]
all = ["nightly", "cuda", "half", "onnx"]

nightly = ["evol-core/nightly"]
half = ["evol-core/half"]
cuda = ["evol-core/cuda"]
onnx = ["evol-core/onnx"]

[dependencies.evol-core]
path = "crates/evol-core"
version = "0.1.0"

[workspace.dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = {version = "2.0.90", features = ["full"]}
serde = {version = "1.0.215", features = ["derive"]}
candle-onnx = "0.8.1"
safetensors = "0.4.5"
itertools = "0.13.0"
