[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT or Apache-2.0"

[package]
name = "evol"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT or Apache-2.0"

[features]
default = []

non-nightly = ["cuda", "half", "onnx"]
all = ["nightly", "cuda", "half", "onnx", "parquet"]

nightly = ["evol-core/nightly"]
half = ["evol-core/half"]
cuda = ["evol-core/cuda"]
onnx = ["evol-core/onnx"]
parquet = ["evol-core/parquet"]

[dependencies.evol-core]
path = "crates/evol-core"
version = "0.1.0"

[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version = "2.0.101", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
safetensors = "0.4.3"
itertools = "0.14.0"
candle-datasets = "0.9.1"
candle-nn = "0.9.1"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
tch = { version = "0.19.0" }
