[workspace]
resolver = "2"
members = [
	"crates/*",
	"examples/*",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
readme = "README.md"
license = "MIT or Apache-2.0"

[package]
name = "kindle"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "MIT or Apache-2.0"

[features]
default = []

non-nightly = ["cuda", "half", "onnx"]
all = ["nightly", "cuda", "half", "onnx", "parquet"]

nightly = ["kindle-core/nightly"]
half = ["kindle-core/half"]
cuda = ["kindle-core/cuda"]
onnx = ["kindle-core/onnx"]
parquet = ["kindle-core/parquet"]

[dependencies.kindle-core]
path = "crates/kindle-core"
version = "0.1.0"

[workspace.dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = {version = "2.0.101", features = ["full"]}
serde = {version = "1.0.219", features = ["derive"]}
safetensors = "0.4.3"
itertools = "0.14.0"
thiserror = "2.0.16"
candle-datasets = "0.9.1"
candle-nn = "0.9.1"
candle-core = "0.9.1"
candle-transformers = "0.9.1"
tch = { version = "0.19.0" }
