[package]
name = "evol-core"
description = "Core crate for evol"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = ["evol-macros/nightly"]
half = ["evol-macros/half", "dep:half"]
cuda = ["evol-macros/cuda", "candle-nn/cuda", "candle-core/cuda", "candle-transformers/cuda"]
onnx = ["dep:candle-onnx", "evol-macros/onnx"]
parquet = ["evol-macros/parquet"]

[dependencies]
evol-macros = { path = "../evol-macros", version = "*" }
candle-onnx = { version = "0.9.1", optional = true }
half = { version = "2.6.0", optional = true }
safetensors = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
tch = { workspace = true }
