[package]
name = "evol-macros"
description = "Macro crate for evol"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = []
half = []
onnx = ["dep:candle-onnx"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
itertools = { workspace = true }
safetensors = { workspace = true }
candle-nn = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-onnx = { version = "0.8.4", optional = true }
phf = { version = "0.11.3", features = ["macros"] }

# [build-dependencies]
# phf_codegen = "0.11.3"
