[package]
name = "kindle-core"
description = "Core crate for kindle"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = ["kindle-macros/nightly"]
half = ["kindle-macros/half", "dep:half"]
cuda = ["kindle-macros/cuda", "candle-nn/cuda", "candle-core/cuda", "candle-transformers/cuda"]
onnx = ["dep:candle-onnx", "kindle-macros/onnx"]
parquet = ["kindle-macros/parquet", "dep:parquet", "dep:image"]

[dependencies]
kindle-macros = { path = "../kindle-macros", version = "*" }
candle-onnx = { version = "0.9.1", optional = true }
half = { version = "2.6.0", optional = true }
thiserror = { workspace = true }
safetensors = { workspace = true }
candle-datasets = { workspace = true }
candle-nn = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
tch = { workspace = true }
parquet = { version = "55.0.0", optional = true }
image = { version = "0.25.6", optional = true }
