[package]
name = "kindle-macros"
description = "Macro crate for kindle"
authors = ["xupremix <xupremix.me@gmail.com>"]
edition.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true

[features]
nightly = []
half = []
cuda = []
onnx = ["dep:candle-onnx"]
parquet = ["dep:parquet", "dep:image"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
itertools = { workspace = true }
safetensors = { workspace = true }
candle-nn = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
phf = { version = "0.11.3", features = ["macros"] }
candle-onnx = { version = "0.9.1", optional = true }
parquet = { version = "55.0.0", optional = true }
image = { version = "0.25.6", optional = true }

# [build-dependencies]
# phf_codegen = "0.11.3"
