[package]
name = "mnist"
edition.workspace = true
version.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
kindle = { path = "../../", version = "*", features = ["parquet", "nightly"] }
# kindle = { path = "../../", version = "*", features = ["cuda", "onnx", "parquet", "nightly"] }
